fixing glow img not showing

--- a/app/pages/home/sections/1-hero/hero.module.css
+++ b/app/pages/home/sections/1-hero/hero.module.css
@@ -1,10 +1,10 @@
 .heroContainer { width: 100%; height: 100vh; background: black; contain: paint; }
 .heroContainer img { transition: opacity .2s; }
 .backgroundImage { position: absolute; left: 0; top: 0; width: 100vw; height: 100vh; object-fit: cover; object-position: center; }
-.glowLines { z-index: 1; height: 100%; width: 50%; object-fit: cover; object-position: bottom; position: absolute; right: 20vw; top: 0; }
+.glowLines { z-index: 1; height: 100%; width: 50%; object-fit: cover; object-position: bottom; position: absolute; right: 20vw; top: 0; transition: opacity .5s !important; }
 .mainImageContainer { z-index: 1; position: absolute; right: -5vw; bottom: -13vw; border-radius: 50vw 50vw 0 0; height: 60vw; width: 35vw; transform: rotate(-40deg); overflow: hidden; border: .5vw solid var(--bg-elevated); }
 .mainImage { width: 125%; height: 100%; object-fit: cover; object-position: center; transform: rotate(45deg) translatex(-25%); }
-.circleImage { z-index: 1; width: 17.5vw; height: 17.5vw; border-radius: 50%; object-fit: cover; object-position: center; position: absolute; right: 25vw; bottom: 2.5vw; }
+.circleImage { z-index: 1; width: 17.5vw; height: 17.5vw; border-radius: 50%; object-fit: contain; object-position: center; position: absolute; right: 25vw; bottom: 2.5vw; }
 .skeleton .skeletonCircle {    width: 18vw; height: 18vw; border-radius: 50% !important; position: absolute; right: 25vw; bottom: 2.5vw; z-index: 2; }
 .content { width: 39vw; height: 100%; padding: 5vw 0 0 2vw; z-index: 1; position: relative; display: flex; flex-direction: column; justify-content: center; }
 .title { font-size: 3vw; text-transform: uppercase; text-align: end; }
